--- a/ERP/Core.Erp.Web/Areas/RRHH/Views/ControlDeMarcaciones/Nuevo.cshtml
+++ b/ERP/Core.Erp.Web/Areas/RRHH/Views/ControlDeMarcaciones/Nuevo.cshtml
@@ -134,11 +134,45 @@
 
 
 <script>
-  
+    $(function () {
+        cargar_tipo_liquidacion_nomina();
+    });
+    $("#IdNomina_Tipo").change(function () {
+        cargar_tipo_liquidacion_nomina();
+    });
+    function cargar_tipo_liquidacion_nomina() {
+        $("#IdNomina_TipoLiqui").empty();
+
+                var datos = {
+                    IdNomina: $("#IdNomina_Tipo").val()
+                }
+
+                $.ajax({
+                    type: 'POST',
+                    data: JSON.stringify(datos),
+                    url: '@Url.Action("get_lst_nomina_tipo_liq", "NominaTipoLiquidacion", new { Area = "RRHH" })',
+                    async: false,
+                    bDeferRender: true,
+                    bProcessing: true,
+                    dataType: 'json',
+                    contentType: 'application/json; charset=utf-8',
+                    success: function (data) {
+
+                        $.each(data, function (i, row) {
+                            $("#IdNomina_TipoLiqui").append("<option value=" + row.IdNomina_TipoLiqui + ">" + row.DescripcionProcesoNomina + "</option>");
+                        });
+                        $("#IdNomina_TipoLiqui").val(2);
+                    },
+                    error: function (error) {
+                    }
+                });
+    };
+
+
     function buscar_marcaciones() {
                 var datos = {
                     FechaInicio: FechaInicio.GetValue(),
-                    FechaFin: FechaFinGetValue(),
+                    FechaFin: FechaFin.GetValue(),
                     IdNomina_Tipo: $("#IdNomina_Tipo").val(),
                     IdTransaccionSession: $("#IdTransaccionSession").val()
 
