--- a/ERP/Core.Erp.Web/Areas/RRHH/Views/ControlDeMarcaciones/_GridViewPartial_control_marcaciones_det.cshtml
+++ b/ERP/Core.Erp.Web/Areas/RRHH/Views/ControlDeMarcaciones/_GridViewPartial_control_marcaciones_det.cshtml
@@ -5,9 +5,9 @@
 @{
     var grid = Html.DevExpress().GridView(settings =>
     {
-        settings.Name = "GridViewPartial_pagos_cheques_det";
-        settings.CallbackRouteValues = new { Controller = "PagosEnCheques", Action = "GridViewPartial_pagos_cheques_det" };
-        settings.KeyFieldName = "IdTransaccion";
+        settings.Name = "GridViewPartial_control_marcaciones_det";
+        settings.CallbackRouteValues = new { Controller = "ControlDeMarcaciones", Action = "GridViewPartial_control_marcaciones_det" };
+        settings.KeyFieldName = "Secuencia";
         settings.Width = Unit.Percentage(100);
 
 
