--- a/ERP/Core.Erp.Web/Areas/RRHH/Views/ControlDeMarcaciones/_GridViewPartial_control_marcaciones_det.cshtml
+++ b/ERP/Core.Erp.Web/Areas/RRHH/Views/ControlDeMarcaciones/_GridViewPartial_control_marcaciones_det.cshtml
@@ -41,6 +41,11 @@
         settings.Settings.ShowHeaderFilterButton = true;
         settings.SettingsBehavior.AllowSelectByRowClick = true;
 
+        //Configuración checkbox
+        settings.CommandColumn.Visible = true;
+        settings.CommandColumn.ShowSelectCheckbox = true;
+        settings.CommandColumn.SelectAllCheckboxMode = GridViewSelectAllCheckBoxMode.AllPages;
+
         settings.Columns.Add(column =>
         {
             column.FieldName = "IdEmpleado";
