--- a/ERP/Core.Erp.Web/Areas/RRHH/Views/ControlDeMarcaciones/_GridViewPartial_control_marcaciones_det.cshtml
+++ b/ERP/Core.Erp.Web/Areas/RRHH/Views/ControlDeMarcaciones/_GridViewPartial_control_marcaciones_det.cshtml
@@ -95,7 +95,7 @@
         });
         settings.Columns.Add(column =>
         {
-            column.FieldName = "HoraIni";
+            column.FieldName = "time_entrada1";
             column.Caption = "Ingreso";
             column.Width = Unit.Percentage(10);
             column.EditorProperties().TextBox(sp =>
@@ -138,6 +138,8 @@
 
             });
         });
+        settings.ClientSideEvents.SelectionChanged = "OnSelectionChanged";
+        settings.ClientSideEvents.BeginCallback = "OnBeginCallback";
     });
 
 }
