--- a/ERP/Core.Erp.Web/Areas/RRHH/Views/ControlDeMarcaciones/Nuevo.cshtml
+++ b/ERP/Core.Erp.Web/Areas/RRHH/Views/ControlDeMarcaciones/Nuevo.cshtml
@@ -39,60 +39,60 @@
     @Html.HiddenFor(q => q.IdAjuste)
     @Html.HiddenFor(q => q.IdTransaccionSession, new { @id = "IdTransaccionSession" })
 
-<div class="row">
-    <div class="col-md-12">
-        <div class="col-md-3">
-            <div class="form-group">
-                <label for="IdNomina_Tipo">Nómina*</label>
-                @Html.DropDownListFor(q => q.IdNomina_Tipo, new SelectList(ViewBag.lst_nomina, "IdNomina_Tipo", "Descripcion"), new { @class = "form-control", @id = "IdNomina_Tipo" })
-                @Html.ValidationMessageFor(q => q.IdNomina_Tipo, "", new { @class = "text-danger" })
-            </div>
-        </div>
-        <div class="col-md-2">
-            <div class="form-group">
-                <label for="Fecha">Buscar marcaciones desde*</label>
-                <div class="input-group date">
-                    <div class="input-group-addon">
-                        <i class="fa fa-calendar"></i>
-                    </div>
-                    @Html.DevExpress().DateEditFor(q=> q.FechaInicio, settings =>
-                {
-                    settings.Name = "FechaInicio";
-                    settings.Properties.UseMaskBehavior = true;
-                    settings.Properties.EditFormat = EditFormat.Date;
-                    settings.Properties.EditFormatString = "dd/MM/yyyy";
-                    settings.Properties.TimeSectionProperties.TimeEditProperties.EditFormat = EditFormat.Date;
-                    settings.Width = System.Web.UI.WebControls.Unit.Percentage(100);
-                }).GetHtml()
-                    @Html.ValidationMessageFor(q => q.FechaInicio, "", new { @class = "text-danger" })
+    <div class="row">
+        <div class="col-md-12">
+            <div class="col-md-3">
+                <div class="form-group">
+                    <label for="IdNomina_Tipo">Nómina*</label>
+                    @Html.DropDownListFor(q => q.IdNomina_Tipo, new SelectList(ViewBag.lst_nomina, "IdNomina_Tipo", "Descripcion"), new { @class = "form-control", @id = "IdNomina_Tipo" })
+                    @Html.ValidationMessageFor(q => q.IdNomina_Tipo, "", new { @class = "text-danger" })
                 </div>
             </div>
-        </div>
-        <div class="col-md-2">
-            <div class="form-group">
-                <label for="Fecha">Hasta*</label>
-                <div class="input-group date">
-                    <div class="input-group-addon">
-                        <i class="fa fa-calendar"></i>
+            <div class="col-md-2">
+                <div class="form-group">
+                    <label for="Fecha">Buscar marcaciones desde*</label>
+                    <div class="input-group date">
+                        <div class="input-group-addon">
+                            <i class="fa fa-calendar"></i>
+                        </div>
+                        @Html.DevExpress().DateEditFor(q=> q.FechaInicio, settings =>
+                    {
+                        settings.Name = "FechaInicio";
+                        settings.Properties.UseMaskBehavior = true;
+                        settings.Properties.EditFormat = EditFormat.Date;
+                        settings.Properties.EditFormatString = "dd/MM/yyyy";
+                        settings.Properties.TimeSectionProperties.TimeEditProperties.EditFormat = EditFormat.Date;
+                        settings.Width = System.Web.UI.WebControls.Unit.Percentage(100);
+                    }).GetHtml()
+                        @Html.ValidationMessageFor(q => q.FechaInicio, "", new { @class = "text-danger" })
                     </div>
-                    @Html.DevExpress().DateEditFor(q=> q.FechaFin, settings =>
-               {
-                   settings.Name = "FechaFin";
-                   settings.Properties.UseMaskBehavior = true;
-                   settings.Properties.EditFormat = EditFormat.Date;
-                   settings.Properties.EditFormatString = "dd/MM/yyyy";
-                   settings.Properties.TimeSectionProperties.TimeEditProperties.EditFormat = EditFormat.Date;
-                   settings.Width = System.Web.UI.WebControls.Unit.Percentage(100);
-               }).GetHtml()
-                    @Html.ValidationMessageFor(q => q.FechaFin, "", new { @class = "text-danger" })
                 </div>
             </div>
-        </div>
-        <div class="box-footer">
-            <button type="button" onclick="buscar_marcaciones();" class="btn btn-primary">Buscar</button>
+            <div class="col-md-2">
+                <div class="form-group">
+                    <label for="Fecha">Hasta*</label>
+                    <div class="input-group date">
+                        <div class="input-group-addon">
+                            <i class="fa fa-calendar"></i>
+                        </div>
+                        @Html.DevExpress().DateEditFor(q=> q.FechaFin, settings =>
+                   {
+                       settings.Name = "FechaFin";
+                       settings.Properties.UseMaskBehavior = true;
+                       settings.Properties.EditFormat = EditFormat.Date;
+                       settings.Properties.EditFormatString = "dd/MM/yyyy";
+                       settings.Properties.TimeSectionProperties.TimeEditProperties.EditFormat = EditFormat.Date;
+                       settings.Width = System.Web.UI.WebControls.Unit.Percentage(100);
+                   }).GetHtml()
+                        @Html.ValidationMessageFor(q => q.FechaFin, "", new { @class = "text-danger" })
+                    </div>
+                </div>
+            </div>
+            <div class="box-footer">
+                <button type="button" onclick="buscar_marcaciones();" class="btn btn-primary">Buscar</button>
+            </div>
         </div>
     </div>
-</div>
     <div class="row">
         <div class="col-md-12">
 
@@ -104,29 +104,43 @@
                 </div>
             </div>
             <div class="col-md-2">
-                    <div class="form-group">
-                        <label for="Fecha">Fecha para el descuento*</label>
-                        <div class="input-group date">
-                            <div class="input-group-addon">
-                                <i class="fa fa-calendar"></i>
-                            </div>
-                            @Html.DevExpress().DateEditFor(q=> q.Fecha_Transac, settings =>
-                        {
-                            settings.Name = "Fecha_Transac";
-                            settings.Properties.UseMaskBehavior = true;
-                            settings.Properties.EditFormat = EditFormat.Date;
-                            settings.Properties.EditFormatString = "dd/MM/yyyy";
-                            settings.Properties.TimeSectionProperties.TimeEditProperties.EditFormat = EditFormat.Date;
-                            settings.Width = System.Web.UI.WebControls.Unit.Percentage(100);
-                        }).GetHtml()
-                            @Html.ValidationMessageFor(q => q.Fecha_Transac, "", new { @class = "text-danger" })
+                <div class="form-group">
+                    <label for="Fecha">Fecha para el descuento*</label>
+                    <div class="input-group date">
+                        <div class="input-group-addon">
+                            <i class="fa fa-calendar"></i>
                         </div>
+                        @Html.DevExpress().DateEditFor(q=> q.FechaNovedades, settings =>
+                    {
+                        settings.Name = "FechaNovedades";
+                        settings.Properties.UseMaskBehavior = true;
+                        settings.Properties.EditFormat = EditFormat.Date;
+                        settings.Properties.EditFormatString = "dd/MM/yyyy";
+                        settings.Properties.TimeSectionProperties.TimeEditProperties.EditFormat = EditFormat.Date;
+                        settings.Width = System.Web.UI.WebControls.Unit.Percentage(100);
+                    }).GetHtml()
+                        @Html.ValidationMessageFor(q => q.FechaNovedades, "", new { @class = "text-danger" })
+                    </div>
                 </div>
             </div>
 
         </div>
 
     </div>
+
+    <div class="row">
+        <div class="col-md-12">
+            <div class="col-md-12">
+                <div class="form-group">
+                    <label for="Valor">Observaciones*</label>
+                    @Html.TextBoxFor(q => q.Observacion, new { @class = "form-control" ,@id= "Observacion" })
+                    @Html.ValidationMessageFor(q => q.Observacion, "", new { @class = "text-danger" })
+                </div>
+            </div>
+        </div>
+
+    </div>
+
     <div class="row">
         <div class="col-md-12">
             <div class="col-md-12">
@@ -218,9 +232,11 @@
             IdNomina_TipoLiqui: $("#IdNomina_TipoLiqui").val(),
             FechaInicio: FechaInicio.GetValue(),
             FechaFin: FechaFin.GetValue(),
-            Fecha_PriPago: Fecha_PriPago.GetValue(),
+            FechaNovedades: Fecha_PriPago.GetValue(),
+            Observacion: $("#Observacion").val(),
+            IDs: selectedIDs,
+            IdTransaccionSession: $("#IdTransaccionSession").val(),
 
-            IDs: selectedIDs
             }
         $("#btn_aprobar").attr("disabled", true);
         $.ajax({
